k8s/api/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integrations-poc
spec:
  selector:
    matchLabels:
      app: integrations-poc
  template:
    metadata:
      labels:
        app: integrations-poc
    spec:
      containers:
        - name: api
          image: gcr.io/experiments-283423/lucastamoios/integrations:latest
          ports:
            - containerPort: 8080
