k8s/api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: integrations-poc
spec:
  selector:
    app: integrations-poc
  ports:
    - port: 8080
      targetPort: 8080
